# emailai

./: .gitattributes  .gitignore
.github/workflows/: azure-static-web-apps-wonderful-mushroom-04a94230f.yml
backend/: function_app.py  host.json  pyproject.toml  requirements.txt
backend/azure-functions/: function_app.py
backend/functions/: __init__.py  categorize.py  draft.py  emails.py  graph.py  inbox.py  ocr.py
backend/functions/prompts/: categorize.py  draft.py  ocr.py  ocr_prompt.py
backend/scripts/: create_email_status.py  create_json_emails.py  test_cosmos.py
backend/utils/: __init__.py  ai_ocr.py  blob.py  blob_storage.py  db.py  graph.py  sanitize.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnalystColumn.jsx  EmailBody.jsx  EmailCard.jsx  EmailDetail.jsx  EmailList.jsx  FIeld.jsx  ResponseForm.jsx
frontend/src/pages/: Dashboard.css  Dashboard.jsx  ProfileGate.jsx  SortBoard.jsx
frontend/src/utils/: api.js
resources/emails/: billing.json  emails.json  endorsements.json  insuranceemails.json  insuranceemails.txt  recepit.json  retail.json
resources/emails/drafts/: appetite.json  docrequests.json  insuranceemails.json  receiptemails.json  recepit.json  underwriting.json
