[project]
name = "emailai"
version = "0.1.0"
description = ""
authors = [
    {name = "Darcy Anderson",email = "darcy.anderson@teamhgs.com"}
]
requires-python = ">=3.11"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
